--- a/transform/models/marts/dim_date.yml
+++ b/transform/models/marts/dim_date.yml
@@ -3,20 +3,34 @@ version: 2
 models:
 
   - name: dim_date
-    description: This table contains information about the dates that events occur for all source.
+    description: >
+     This table contains information about the dates that events occur for all source.
     columns:
       - name: metric_date
-        description: Single date record.
+        description: >
+          Single date record.
         tests:
           - not_null
           - unique
+      
       - name: day
-        description: Day of metric_date.
+        description: >
+         Day of metric_date.
       - name: month
-        description: Month of metric_date.
+        description: >
+         Month of metric_date.
       - name: year
-        description: Year of metric_date.
+        description: >
+         Year of metric_date.
       - name: quarter
-        description: Quarter of metric_date.
+        description: >
+         Quarter of metric_date.
       - name: fullmonth
-        description: Full name of the month of the year.
+        description: >
+         Full name of the month of the year.
+      - name: date_sk
+        description: >
+          Surrogate key for the date dimension, generated based on metric_date.
+        tests:
+          - not_null
+          - unique
