Add ML aggregation models and update staging
- Added 'agg_by_ml.sql' and 'agg_by_ml.yml' for Machine Learning.
- Added staging models for Bill of Materials and Product Inventory.
- Updated schema and Power BI files.

--- a/transform/models/staging/src_stg_dev_taciana_vasconcelos.yml
+++ b/transform/models/staging/src_stg_dev_taciana_vasconcelos.yml
@@ -30,6 +30,8 @@ sources:
       - name: productmodel
       - name: productsubcategory
       - name: unitmeasure
+      - name: productinventory
+      - name: billofmaterials
 
   - name: db_aw_purchasing
     database: RAW_AW
