--- a/transform/models/marts/agg_by_ml.yml
+++ b/transform/models/marts/agg_by_ml.yml
@@ -1,60 +1,67 @@
 version: 2
+
 models:
   - name: agg_by_ml
     description: >
-      This model aggregates sales and product data, grouped by year and month, and includes various metrics such as sales, inventory, and components information.
+      This model aggregates sales and inventory data for analysis and forecasting.
+      It combines various sources, including sales orders, products, and territories,
+      to generate monthly aggregated metrics. These metrics include total sales, total 
+      orders, average sales per order, inventory levels, and components used in assembly.
     columns:
       - name: order_year
         description: >
-          The year in which the order was placed.
+          Year of the sales order, extracted from the order date.
       - name: order_month
         description: >
-          The month (start of the month) in which the order was placed.
+          Month of the sales order, aggregated at the monthly level.
       - name: product_id
         description: >
-          The unique identifier for the product.
+          Unique identifier for the product sold.
       - name: territory_name
         description: >
-          The name of the sales territory.
+          Name of the sales territory where the order was placed.
       - name: territory_group
         description: >
-          The group of the sales territory.
+          Group to which the sales territory belongs, for higher-level aggregation.
       - name: countryregion_code
         description: >
-          The code for the country/region associated with the territory.
+          Code representing the country or region of the sales territory.
       - name: store_name
         description: >
-          The name of the store associated with the order, if applicable.
+          Name of the store associated with the sales order.
       - name: product_name
         description: >
-          The name of the product.
+          Descriptive name of the product sold in the sales order.
+      - name: product_number
+        description: >
+          Unique product number assigned to the product in the catalog.
       - name: name_product_category
         description: >
-          The category of the product.
+          Category name of the product for classification purposes.
       - name: name_product_subcategory
         description: >
-          The subcategory of the product.
+          Subcategory name of the product, a more specific classification.
       - name: total_inventory
         description: >
-          The total available inventory for the product.
+          Total inventory available for the product at the time of the order.
       - name: total_orders
         description: >
-          The total number of unique orders for the product.
+          Total number of distinct orders containing the product.
       - name: total_sales
         description: >
-          The total sales amount for the product.
+          Total sales amount for the product, calculated by summing all order lines.
       - name: avg_sales_per_order
         description: >
-          The average sales amount per order for the product.
+          Average sales amount per order for the product.
       - name: min_sales
         description: >
-          The minimum sales amount recorded for an order of the product.
+          Minimum sales amount observed in a single order line for the product.
       - name: max_sales
         description: >
-          The maximum sales amount recorded for an order of the product.
+          Maximum sales amount observed in a single order line for the product.
       - name: components
         description: >
-          A list of component IDs associated with the product.
+          Array of unique component IDs required for the product assembly.
       - name: assembly_quantities
         description: >
-          A list of assembly quantities associated with each component of the product.
+          Array of quantities needed for each component in the product assembly.
